@@ -1,5 +1,5 @@
 AUX 1.0.3-libsablot-expat.patch 286 RMD160 a80fd29614a14b0a6b3e5fb800176c13c9ee63f8 SHA1 644b881c7f2658eaaea57c3df24dbffe4cb1179b SHA256 5721c00006a06a991bb171c85ffc794348bbe732bae68447a26457621eedda89
 DIST Sablot-1.0.3.tar.gz 607597 RMD160 bbf2b57d95efbe1fce0ba42813560df4dbde9e3a SHA1 4e60a6aef32b661d7887b3ffd28339f47e2565e1 SHA256 a0c737ada78d0d305a2a964595167e0c6d17ff0afd3b801714768deb681bf362
-EBUILD sablotron-1.0.3.ebuild 1252 RMD160 3ae4774f004d7f9e25310f9ddf82fcf209e3c43b SHA1 744e2220ce8c5ebbcf3b8051efc1f639b44d7542 SHA256 0f36163edd33b9f6cb35793e43fb6334f715ea9d47bb051b3a4e57bab35f745f
-MISC ChangeLog 8968 RMD160 3d3111b7f9b110789db4ee275fadb551b72a22c1 SHA1 33339f7bd4ee3983505ab9520c370842d12ac7f7 SHA256 0d9db9c2caf90ad4f0993eda260e2bfddcea83bd82a40f7f7aa538d0536fd23f
+EBUILD sablotron-1.0.3.ebuild 1261 RMD160 2e448949dd537ad4c0114a2cfefbd04dcff2d74d SHA1 280f13df534b1e505014a226678365274c13c98f SHA256 28eb32fc3a34213ed643d04c38ccff46b1f5fa8ed9a7065e256d4e8d3376aa89
+MISC ChangeLog 9081 RMD160 e01d32b4bf5f15dace928174bb974b151aa582cd SHA1 2ad7b7583d40bb08ca81aedd3c112d970cee0fda SHA256 c88518fbdbd9ad909f7eeef87d765d6868d3eccbf6eaa31d6e28038d2ba823b2
 MISC metadata.xml 159 RMD160 a94e7b2c191d1593b8bc416d266571e001c2f673 SHA1 3c1d0831d8acacef390234d20d7711cabded861a SHA256 52cf1b9dda72e2d61fef95515c8a124ac9f1196e5509e5636e269f396fcba8a3
