@@ -1,6 +1,9 @@
 # ChangeLog for app-text/sablotron
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/sablotron/ChangeLog,v 1.66 2009/06/20 11:47:10 flameeyes Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/sablotron/ChangeLog,v 1.67 2010/02/06 14:19:59 tove Exp $
+
+  06 Feb 2010; Torsten Veller <tove@gentoo.org> sablotron-1.0.3.ebuild:
+  Prepare in the correct directory (#300798)
 
   20 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
   -sablotron-1.0.1.ebuild:
